css: fix font-size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ textarea {
 #code, #code .CodeMirror, #code > textarea {
   width: 50vw;
   height: calc(100vh - 100px);
+  font-size: 1vw;
 }
 
 #result {
